--- a/app/assets/styles/scss/main.scss
+++ b/app/assets/styles/scss/main.scss
@@ -11,3 +11,5 @@
 @import "./modules/_post.scss";
 @import "./modules/_site-footer.scss";
 @import "./modules/_social-icons.scss";
+@import "./modules/_works.scss";
+@import "./modules/_work.scss";
