--- a/app/assets/styles/scss/modules/_post.scss
+++ b/app/assets/styles/scss/modules/_post.scss
@@ -1,4 +1,5 @@
 .post {
+  position: relative;
   background-color: white;
   padding: 1rem;
   margin-bottom: 1rem;
@@ -18,5 +19,15 @@
     border-right: 1px solid black;
     height: 1.4rem;
     margin-right: 1rem;
+  }
+
+  &__link {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 20;
   }
 }
