--- a/app/assets/styles/scss/modules/_work.scss
+++ b/app/assets/styles/scss/modules/_work.scss
@@ -1,6 +1,7 @@
 .work {
   color: $primaryTextColor;
   padding-bottom: 1rem;
+  margin-bottom: 1rem;
   border-bottom: 1px solid #e0e0e0;
   @include atLaptop {
     display: flex;
